2008-05-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add a macro to test IQ in guard expressions.
	Rename NS_JABBER_SESSION as NS_SESSION.

	* src/server/exmpp_server_binding.erl,
	src/server/exmpp_server_compression.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_sasl.erl,
	src/server/exmpp_server_session.erl,
	src/server/exmpp_server_tls.erl: Use 'receiving entity' instead of
	'server'. Replace references to exmpp_server_stream with
	exmpp_stream.

	* src/server/exmpp_client_binding.erl,
	src/client/exmpp_client_compression.erl,
	src/client/exmpp_client_legacy_auth.erl,
	src/server/exmpp_client_sasl.erl,
	src/server/exmpp_client_session.erl,
	src/server/exmpp_client_tls.erl: Use 'initiating entity' instead of
	'client'.

	* src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_compression.erl,
	src/client/exmpp_client_compression.erl: Fix exceptions documention.

	* src/client/exmpp_client_compression.erl,
	src/server/exmpp_server_sasl.erl: Avoid list concatenation when it's
	possible.

	* src/server/exmpp_server_binding.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_legacy_auth.erl: Update documentation. Use the
	new IS_IQ macro.

	* src/server/exmpp_server_sasl.erl, src/server/exmpp_client_sasl.erl,
	src/server/exmpp_server_session.erl,
	src/server/exmpp_client_session.erl, src/server/exmpp_server_tls.erl,
	src/client/exmpp_client_tls.erl: Use exceptions for error handling.
	Add basic documentation.

	* src/server/exmpp_server_sasl.erl (failure): Rewrite error creation.
	(next_step): Change {auth, Mech} by {auth, Mech, none} so that the
	'auth' tuple has always the same size.

	* src/server/exmpp_server_binding.erl,
	src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_session.erl,
	src/client/exmpp_client_session.erl: Use exmpp_iq instead of
	exmpp_xml.

	* src/client/exmpp_client_binding.erl (announced_support): Fix a bug