@@ -39,7 +39,7 @@ else
 DYNAMIC_LIB_CFLAGS = -Wall -fpic -shared
 endif
 
-DRIVERS =  exmpp_expat_drv.so exmpp_stringprep_drv.so ejabberd_zlib_drv.so iconv_erl.so tls_drv.so
+DRIVERS =  exmpp_expat.so exmpp_stringprep_drv.so ejabberd_zlib_drv.so iconv_erl.so tls_drv.so
 
 all: $(DRIVERS)
 
@@ -67,16 +67,16 @@ xmpp_attrs.h: xmpp_attrs.h.awk xmpp_attrs.h.in
 	$(AWK) -f xmpp_attrs.h.awk xmpp_attrs.h.in > $@
 
 # Expat port driver
-exmpp_expat_drv_la_CPPFLAGS = -Icontrib \
-                              $(EI_CPPFLAGS) -DEI_ENCODE_STRING_BUG \
-                              $(EXPAT_CPPFLAGS)
-exmpp_expat_drv_la_LDFLAGS = $(EI_LDFLAGS) $(EI_LIBS) \
+exmpp_expat_la_CPPFLAGS = -Icontrib \
+			  $(EI_CPPFLAGS) -DEI_ENCODE_STRING_BUG \
+			  $(EXPAT_CPPFLAGS)
+exmpp_expat_la_LDFLAGS = $(EI_LDFLAGS) $(EI_LIBS) \
                              $(EXPAT_LDFLAGS) $(EXPAT_LIBS)
-exmpp_expat_drv_la_SOURCES = contrib/hashtable.c \
-                             exmpp_expat_drv.c
+exmpp_expat_la_SOURCES = contrib/hashtable.c \
+                             exmpp_expat.c
 
-exmpp_expat_drv.so: $(BUILT_SOURCES) $(exmpp_expat_drv_la_SOURCES)
-	$(CC) $(exmpp_expat_drv_la_CPPFLAGS) $(CPPFLAGS) $(DYNAMIC_LIB_CFLAGS) $(CFLAGS) $(exmpp_expat_drv_la_LDFLAGS) $(LDFLAGS) $(exmpp_expat_drv_la_SOURCES) -o $@
+exmpp_expat.so: $(BUILT_SOURCES) $(exmpp_expat_la_SOURCES)
+	$(CC) $(exmpp_expat_la_CPPFLAGS) $(CPPFLAGS) $(DYNAMIC_LIB_CFLAGS) $(CFLAGS) $(exmpp_expat_la_LDFLAGS) $(LDFLAGS) $(exmpp_expat_la_SOURCES) -o $@
 
 # Stringprep
 exmpp_stringprep_drv_la_CPPFLAGS = $(EI_CPPFLAGS)
