@@ -1,3 +1,8 @@
+2008-05-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* c_src/exmpp_expat.c, c_src/Makefile.am, c_src/Makefile.unix,
+	src/core/exmpp_xml.erl: Rename 'exmpp_expat_drv' to 'exmpp_expat'.
+
 2008-05-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* include/exmpp.hrl: Add a macro to test IQ in guard expressions.
